# OSmOSE_post_processing

./: .gitignore  FPod2APLOSE.py  Plot_results_FPOD.py  Plot_results_detections_auto.py  README.md  change_timebin.py  comparaison_2_csv_results.py  create csv timestamp.py  def_func.py  données_auxilaires.py  environment.yaml  environment.yml  map.html  premiers_resultats.py  pyproject.toml  read_me.md  results_mathilde.py  stat_annotation.py
.github/workflows/: github_ci.yml
APOCADO/: APLOSE_Add_Weak_Detections.py  APOCADO_analyse_metadata.py  APOCADO_detection_range_ST.py  APOCADO_gantt.py  APOCADO_map_interactive.py  APOCADO_save_data_local.py  APOCADO_stat.py  APOCADO_utils.py  APOCADO_write_metadata.py
CETIROISE/: CETIROISE_utils.py
GLIDER/: glider_figures.py  glider_nav_data.py  glider_script.py  glider_utils.py  glider_utils_to_clean.py  hihi.py  plot_depth_detection_glider.py  process_glider_det.py
archive/: Plot_results_detections_auto.py  create csv timestamp.py  perf_FPOD.py  premiers_resultats_080223.py
docs/source/: conf.py  data_aplose.rst  detection_filter.rst  example_APOCADO.ipynb  example_OHAGEODAMS.ipynb  example_OHASISBIO.ipynb  example_multi_barplot.ipynb  example_overview.ipynb  example_single_barplot.ipynb  examples.rst  index.rst  (+4 more)
results/: APOCADO_analyse_metadata.py  APOCADO_write_metadata.py  analyse_metadata_ST.py  auxiliary_data.py  comparaison_2_csv_results.py  detection_range_ST.py  données_auxilaires.py  fun_richard.py  glider_figures.py  julie_ltas.py  metadata_ST.py  plot_depth_detection_glider.py  plot_figure_season.py  premiers_resultats.py  premiers_resultats_parameters.yaml  process_glider_det.py  result_deployment.py  save_data_ST.py  save_metadata_ST.py  soundscape.py  stats_diel_pattern.py  untitled0.py  write_metadata_ST.py
scripts/: APLOSE_detection_performances.py  APLOSE_double_check.py  Deployment_script.py  cpod_formatting.py  premier_resultats.py  premier_resultats_refacto.py  premiers_resultats.py  soundscape.py  yaml_example.yaml
tests/: conftest.py  test_DataAplose.py  test_DetectionFilters.py  test_audio_utils.py  test_core_utils.py  test_filtering_utils.py  test_fpod_utils.py  test_glider_utils.py  test_metric_utils.py  test_pamguard_utils.py  test_plot_utils.py  test_recording_period.py
user_case/: config.py  config.yaml  example_FPOD-CPOD_aplose.ipynb  example_FPOD-CPOD_firstresults.ipynb  example_FPOD-CPOD_raw.ipynb  user_case_APOCADO.ipynb  user_case_CALAIS.ipynb  user_case_OHAGEODAMS.ipynb  user_case_OHASISBIO.ipynb
utilities/: APLOSE_Add_Weak_Detections.py  APOCADO_save_data_local.py  APOCADO_stat.py  ApRaw2Timebin.py  Deployment - test.py  Deployment.py  FPod2APLOSE.py  LTAS.py  change_timezone.py  cleanRavenTable2csv.py  clear_PG_WMdet_csv.py  code snippet rename.py  code snippet rename.txt  config.py  convert_to_flac.py  create_filelist_Raven.py  create_filemetadata_csv.py  create_timestamp_csv.py  def_func.py  deployment_utils.py  double_check_utils.py  export2Raven.py  find_FA_PG_WM_det.py  format_MIRACETI_data.py  gantt_graph.py  generate_spectro_withouth_audio_segmentation.py  glider_nav_data.py  glider_utils.py  map_interactive.py  normalize_audio.py  print_spectro.py  qrcode.py  save_APOCADO_data_local.py  save_sud.py  sort_ST_files.py  trajectoryFda.py  uigetdir2.m
utils/: APOCADO_stat.py  APOCADO_utils.py  Deployment.py  FPod2APLOSE.py  LTAS.py  SoundTrap.py  SoundTrap_config.py  __init__.py  audio_utils.py  change_timezone.py  cleanRavenTable2csv.py  clear_PG_WMdet_csv.py  create_filelist_Raven.py  create_filemetadata_csv.py  create_timestamp_csv.py  def_func.py  deployment_utils.py  double_check_utils.py  export2Raven.py  export_result_file.py  find_FA_PG_WM_det.py  format_MIRACETI_data.py  fpod_utils.py  generate_qrcode.py  generate_spectro_withouth_audio_segmentation.py  glider_config.py  glider_utils.py  premiers_resultats_utils.py  print_spectro.py  raven2aplose.py  save_sud.py  sylence_utils.py  trajectoryFda.py
(+168 files in other folders)
