[project]
name = "post-processing"
version = "0.1.0"
description = "This repository is used to process passive acoustic data particularly marine mammals automatic detections and manual annotations according to OSmOSE project format."
authors = [
    {name = "Mathieu Dupont", email = "mathieu.dupont@ensta.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osekit >= 0.2.5",
    "astral >=3.2",
    "easygui >=0.98.3",
    "matplotlib >=3.10.1",
    "numpy >=1.24.2",
    "pandas >=2.2.3",
    "pytz >=2025.1",
    "pyyaml >=6.0.2",
    "scipy >=1.15.2",
    "seaborn >=0.12.2",
    "soundfile >=0.12.1",
    "tqdm >=4.67.1"
]

[tool.ruff]
select = ["ALL"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
